--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ button{
 <div class="card" id="question">
   <h1>Will you be my Valentine?</h1>
   <p>
-    Not because today is special,<br>
-    but because **you** are.
+    Ten years with you and somehow I still get butterflies.<br>
+    Bacha💗
   </p>
 
   <div class="actions">
@@ -145,6 +145,7 @@ button{
     I don’t promise perfection.<br>
     I promise honesty, laughter,<br>
     and choosing you — every day.
+    Love you Bacha 💗
   </p>
 </div>
 
