--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ button{
   <p>
     I don’t promise perfection.<br>
     I promise honesty, laughter,<br>
-    and choosing you — every day.
+    and choosing you — every day. <br>
     Love you Bacha 💗
   </p>
 </div>
