--- a/question.html
+++ b/question.html
@@ -358,7 +358,7 @@
 
         <div class="question-container" id="questionContainer">
             <div class="question-number" id="questionNumber">Question 1 of 6</div>
-            <h1 id="question">Will you be my girlfriend?</h1>
+            <h1 id="question">Will you be my Wife💗?</h1>
             <p class="subtitle" id="subtitle">I've been thinking about this for a while now, and I can't imagine my days without you in them. You make everything better.</p>
             
             <div class="buttons-wrapper">
