--- a/question.html
+++ b/question.html
@@ -362,7 +362,7 @@
             <p class="subtitle" id="subtitle">I've been thinking about this for a while now, and I can't imagine my days without you in them. You make everything better.</p>
             
             <div class="buttons-wrapper">
-                <button class="yes-btn" id="yesBtn">Yes</button>
+                <button class="yes-btn" id="yesBtn">Yes🌷</button>
                 <button class="no-btn" id="noBtn">Not Yet</button>
             </div>
 
@@ -377,9 +377,9 @@
         </div>
 
         <div class="success-message" id="successMessage">
-            <div class="success-icon">✦</div>
+            <div class="success-icon">💗</div>
             <h2>You said yes</h2>
-            <p>You've just made me the happiest person alive.<br>I promise to cherish every moment with you.</p>
+            <p>You've just made me the happiest person alive.<br>I promise to cherish every moment with you. <br> Love You PoPo💗 </p>
             <div class="success-decoration">♡</div>
         </div>
     </div>
@@ -481,7 +481,7 @@
                 }, 400);
             } else {
                 // Last question - convert to yes
-                noBtn.textContent = "Fine, Yes";
+                noBtn.textContent = "Fine, Yes💗";
                 noBtn.onclick = () => yesBtn.click();
             }
         });
