--- a/index.html
+++ b/index.html
@@ -142,9 +142,8 @@ button{
 <div class="card celebration hidden" id="celebration">
   <h1>You said yes 💗</h1>
   <p>
-    I don’t promise perfection.<br>
-    I promise honesty, laughter,<br>
-    and choosing you — every day. <br>
+  तू भागीरथ सी चंचल, मैं अलकनंदा सा शांत प्रिये,<br>
+  जब संगम हो हमारा, तू बने गंगा और मैं तेरा घाट प्रिये!<br>
     Love you Bacha 💗
   </p>
 </div>
