--- a/question.html
+++ b/question.html
@@ -363,7 +363,7 @@
             
             <div class="buttons-wrapper">
                 <button class="yes-btn" id="yesBtn">Yes🌷</button>
-                <button class="no-btn" id="noBtn">Not Yet</button>
+                <button class="no-btn" id="noBtn">Not Yet🫣</button>
             </div>
 
             <div class="progress-dots" id="progressDots">
